--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "@babel/runtime": "^7.9.6",
     "@loadable/babel-plugin": "^5.13.2",
     "@loadable/server": "^5.14.0",
-    "@loadable/webpack-plugin": "^5.14.0",
-    "react-dom": "^16.12.0"
+    "@loadable/webpack-plugin": "^5.14.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -30,7 +29,8 @@
   "license": "MIT",
   "peerDependencies": {
     "@loadable/component": "^5.14.1",
-    "gatsby": "^2.12.1"
+    "gatsby": "^2.12.1",
+    "react-dom": "^16.12.0 || ^17.0.1"
   },
   "repository": {
     "type": "git",
