--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.7.5",
-    "babel-preset-gatsby-package": "^0.11.0",
+    "babel-preset-gatsby-package": "^1.0.0",
     "cross-env": "^7.0.3"
   },
   "keywords": [
@@ -29,7 +29,7 @@
   "license": "MIT",
   "peerDependencies": {
     "@loadable/component": "^5.14.1",
-    "gatsby": "^2.12.1",
+    "gatsby": "^2.12.1 || ^3.0.0",
     "react-dom": "^16.12.0 || ^17.0.1"
   },
   "repository": {
