--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   "dependencies": {
     "@babel/runtime": "^7.9.6",
     "@loadable/babel-plugin": "^5.13.2",
-    "@loadable/server": "^5.14.0",
-    "@loadable/webpack-plugin": "^5.14.0"
+    "@loadable/server": "^5.15.0",
+    "@loadable/webpack-plugin": "^5.15.0",
+    "@loadable/component": "^5.15.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.7.5",
-    "babel-preset-gatsby-package": "^0.11.0",
-    "cross-env": "^7.0.3"
+    "babel-preset-gatsby-package": "^1.0.0",
+    "cross-env": "^7.0.3",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "2.3.0"
   },
   "keywords": [
     "gatsby",
@@ -28,8 +32,7 @@
   "homepage": "https://github.com/hector-del-rio/gatsby-plugin-loadable-components-ssr",
   "license": "MIT",
   "peerDependencies": {
-    "@loadable/component": "^5.14.1",
-    "gatsby": "^2.12.1",
+    "gatsby": "^2.12.1 || ^3.0.0",
     "react-dom": "^16.12.0 || ^17.0.1"
   },
   "repository": {
@@ -38,10 +41,13 @@
   },
   "scripts": {
     "build": "babel src --out-dir . --ignore **/__tests__",
-    "prepare": "cross-env NODE_ENV=production npm run build",
+    "prepare": "cross-env NODE_ENV=production npm run build && husky install",
     "watch": "babel -w src --out-dir . --ignore **/__tests__"
   },
   "engines": {
     "node": ">=8.0.0"
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
