--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gatsby-plugin-loadable-components-ssr",
   "description": "Server-side rendering loadable components in your gatsby application",
-  "version": "2.2.1-beta.2",
-  "author": "Hector del Rio <public.hector.del.rio@gmail.com>",
+  "version": "3.0.0",
+  "author": "Grayson Hicks <graysonhicks@gmail.com>",
   "bugs": {
-    "url": "https://github.com/hector-del-rio/gatsby-plugin-loadable-components-ssr/issues"
+    "url": "https://github.com/graysonhicks/gatsby-plugin-loadable-components-ssr/issues"
   },
   "dependencies": {
     "@babel/runtime": "^7.9.6",
@@ -29,7 +29,7 @@
     "@loadable/component",
     "@loadable/server"
   ],
-  "homepage": "https://github.com/hector-del-rio/gatsby-plugin-loadable-components-ssr",
+  "homepage": "https://github.com/graysonhicks/gatsby-plugin-loadable-components-ssr",
   "license": "MIT",
   "peerDependencies": {
     "gatsby": "^2.12.1 || ^3.0.0",
@@ -37,7 +37,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hector-del-rio/gatsby-plugin-loadable-components-ssr.git"
+    "url": "https://github.com/graysonhicks/gatsby-plugin-loadable-components-ssr.git"
   },
   "scripts": {
     "build": "babel src --out-dir . --ignore **/__tests__",
@@ -45,7 +45,7 @@
     "watch": "babel -w src --out-dir . --ignore **/__tests__"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=12.0.0"
   },
   "lint-staged": {
     "*.{js,css,md}": "prettier --write"
