--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "license": "MIT",
   "peerDependencies": {
     "gatsby": "^2.12.1 || ^3.0.0 || ^4.0.0",
-    "react-dom": "^16.12.0 || ^17.0.1",
+    "react-dom": "^16.12.0 || ^17.0.1" || "^18.0.0",
     "@loadable/component": "^5.15.0"
   },
   "repository": {
