--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-plugin-loadable-components-ssr",
   "description": "Server-side rendering loadable components in your gatsby application",
-  "version": "4.2.1",
+  "version": "4.3.0",
   "author": "Grayson Hicks <graysonhicks@gmail.com>",
   "bugs": {
     "url": "https://github.com/graysonhicks/gatsby-plugin-loadable-components-ssr/issues"
@@ -32,7 +32,7 @@
   "license": "MIT",
   "peerDependencies": {
     "gatsby": "^2.12.1 || ^3.0.0 || ^4.0.0",
-    "react-dom": "^16.12.0 || ^17.0.1 || ^18.0.0",
+    "react-dom": "^16.12.0 || ^17.0.1",
     "@loadable/component": "^5.15.0"
   },
   "repository": {
